# AniMind

./: .gitignore  LICENSE  README.md
dataset_builder/: README.md  pyproject.toml
dataset_builder/docker/: jikan-local.compose.yml
dataset_builder/src/animind_dataset/: __init__.py  anilist_scraper.py  cli.py  config.py  discovery.py  export_parquet.py  http_client.py  ingest_anime.py  ingest_users.py  models.py  pipeline.py  rate_limit.py  storage_sqlite.py
dataset_builder/tests/: fakes.py  test_cli_smoke.py  test_http_client.py  test_ingest_anime.py  test_models.py  test_pipeline_integration.py  test_rate_limit.py
recommender/: README.md  pyproject.toml
recommender/config/: recommender.toml
recommender/data/semantic_ids/conservative/: recall_report.json  semantic_id_to_anime.jsonl  semantic_vocab.json  special_tokens.json  token_stats.json  tokenize_run_summary.json
recommender/src/animind_recommender/: cli.py  config.py  prep.py  train.py  train_data.py  train_eval.py  train_runtime.py  train_tokens.py  train_types.py  train_wandb.py
recommender/tests/: test_cli.py  test_config.py  test_prep.py  test_train.py
tokenizer/: .gitignore  README.md  pyproject.toml
tokenizer/artifacts/rqvae_conservative/: README.md  manifest.json
tokenizer/config/: rqvae_aggressive.toml  rqvae_conservative.toml  tokenizer.toml
tokenizer/src/animind_tokenizer/: __init__.py  cli.py  config.py  embed.py  prep.py  rqvae.py  tokenize.py
tokenizer/tests/: test_config.py  test_embed.py  test_prep.py  test_rqvae.py  test_tokenize.py
