[project]
name = "animind-dataset"
version = "0.1.0"
description = "Terminal-first Jikan dataset builder for user preference + anime enrichment"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "httpx>=0.28.1",
  "pydantic>=2.12.3",
  "rich>=14.3.2",
  "typer>=0.23.1",
  "pandas>=3.0.0",
  "pyarrow>=23.0.0",
  "kagglehub>=0.3.13",
]

[project.scripts]
animind-dataset = "animind_dataset.cli:app"

[dependency-groups]
dev = [
  "pytest>=8.4.2",
  "pytest-asyncio>=1.2.0",
]

[build-system]
requires = ["hatchling>=1.28.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/animind_dataset"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
