[project]
name = "animind-recommender"
version = "0.1.0"
description = "LLM dataset prep pipeline for AniMind semantic-id recommender tasks"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "pandas>=3.0.0",
  "pyarrow>=23.0.0",
  "rich>=14.3.2",
  "typer>=0.23.1",
  "torch>=2.5.0",
  "transformers>=4.48.0",
  "datasets>=3.0.0",
  "accelerate>=1.2.0",
  "peft>=0.14.0",
  "trl>=0.16.0",
  "wandb>=0.19.0",
]

[project.scripts]
animind-recommender = "animind_recommender.cli:app"

[dependency-groups]
dev = [
  "pytest>=8.4.2",
]

[build-system]
requires = ["hatchling>=1.28.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/animind_recommender"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
